--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/bg_main_page"
     android:orientation="vertical">
 
     <android.support.design.widget.AppBarLayout
@@ -21,16 +20,40 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <Button
-        android:id="@+id/btn_start_listening"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/large_spacing"
-        android:background="@drawable/ripple_bg"
-        android:paddingLeft="@dimen/very_large_spacing"
-        android:paddingRight="@dimen/very_large_spacing"
-        android:text="@string/start_listening"
-        android:textColor="@android:color/black"
-        android:textSize="20sp" />
-</android.support.design.widget.CoordinatorLayout>
+
+    <android.support.design.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@mipmap/bg_main_page"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/btn_start_listening"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/large_spacing"
+            android:background="@drawable/ripple_bg"
+            android:paddingLeft="@dimen/very_large_spacing"
+            android:paddingRight="@dimen/very_large_spacing"
+            android:text="@string/start_listening"
+            android:textColor="@android:color/black"
+            android:textSize="20sp" />
+
+        <android.support.v4.widget.DrawerLayout
+            android:id="@+id/dl_main"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <android.support.design.widget.NavigationView
+                android:id="@+id/nv"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="start"
+                android:fitsSystemWindows="true"
+                app:headerLayout="@layout/nav_header_main"
+                app:menu="@menu/menu_navigation_view_main" />
+
+        </android.support.v4.widget.DrawerLayout>
+    </android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
