Resolved DrawerLayout bug of button.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,23 +27,30 @@
         android:background="@mipmap/bg_main_page"
         android:orientation="vertical">
 
-        <Button
-            android:id="@+id/btn_start_listening"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="@dimen/large_spacing"
-            android:background="@drawable/ripple_bg"
-            android:paddingLeft="@dimen/very_large_spacing"
-            android:paddingRight="@dimen/very_large_spacing"
-            android:text="@string/start_listening"
-            android:textColor="@android:color/black"
-            android:textSize="20sp" />
-
         <android.support.v4.widget.DrawerLayout
             android:id="@+id/dl_main"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="false">
+
+            <FrameLayout
+                android:id="@+id/fm_main"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <Button
+                    android:id="@+id/btn_start_listening"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:background="@drawable/ripple_bg"
+                    android:paddingLeft="@dimen/very_large_spacing"
+                    android:paddingRight="@dimen/very_large_spacing"
+                    android:text="@string/start_listening"
+                    android:textColor="@android:color/black"
+                    android:textSize="20sp" />
+
+            </FrameLayout>
 
             <android.support.design.widget.NavigationView
                 android:id="@+id/nv"
@@ -53,7 +60,6 @@
                 android:fitsSystemWindows="true"
                 app:headerLayout="@layout/nav_header_main"
                 app:menu="@menu/menu_navigation_view_main" />
-
         </android.support.v4.widget.DrawerLayout>
     </android.support.design.widget.CoordinatorLayout>
 </LinearLayout>
