--- a/app/src/main/res/layout/main_page_nav_header_main.xml
+++ b/app/src/main/res/layout/main_page_nav_header_main.xml
@@ -11,12 +11,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/avatar_medium_size"
+        android:layout_height="@dimen/avatar_medium_size"
         android:layout_marginTop="@dimen/large_spacing"
-        android:src="@android:drawable/sym_def_app_icon" />
+        android:src="@mipmap/head_image" />
 
     <TextView
         android:layout_width="match_parent"
