--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <resources>
+
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
@@ -11,6 +12,13 @@
     <dimen name="large_spacing">16dp</dimen>
     <dimen name="very_large_spacing">20dp</dimen>
     <dimen name="super_very_large_spacing">30dp</dimen>
+
+    <!-- Avatar -->
+    <dimen name="avatar_very_small_size">32dp</dimen>
+    <dimen name="avatar_small_size">48dp</dimen>
+    <dimen name="avatar_medium_size">64dp</dimen>
+    <dimen name="avatar_large_size">96dp</dimen>
+    <dimen name="avatar_very_large_size">128dp</dimen>
 
     <!-- Main Activity -->
     <dimen name="main_toolbar_icon">32dp</dimen>
